Fix wrapping of books and display of read property

--- a/style.css
+++ b/style.css
@@ -19,8 +19,9 @@ body {
 
 #container {
     display: flex;
+    flex-wrap: wrap;
     gap: 5rem;
-    padding: 0 3rem;
+    padding: 0 3rem 3rem 3rem;
 }
 
 
